# smooth-muscle-seg

./: .gitignore  README.md  predict.py  pyproject.toml  train.py
configs/: default.yaml  flow_matching.yaml  mednext.yaml  unetr.yaml
src/smooth_muscle_seg/: dataset.py  lit_datamodule.py  lit_module.py  losses.py  metrics.py  model.py  transforms.py
